syntax = "proto3";

package cart;

// https://protobuf.dev/reference/java/java-generated/
option java_multiple_files = true;
option java_package = "com.example.demo.stubs";
option java_outer_classname = "CartServiceProto";

service CartService {
  rpc AddToCart(AddToCartRequest) returns (EmptyResponse);
  rpc GetCartByUserId(GetCartByUserIdRequest) returns (GetCartByUserIdResponse);
}

// Messages
message EmptyResponse {}

message AddToCartRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message GetCartByUserIdRequest { int64 user_id = 1; }

message GetCartByUserIdResponse { repeated CartItem cartItems = 1; }

message CartItem {
  int64 product_id = 1;
  int64 quantity = 2;
}